<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="12dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/guide_text"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_card"
                    android:layout_width="184dp"
                    android:layout_height="123dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_guide"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:src="@drawable/img_card_back"
                    android:layout_marginTop="8dp"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_card_valid"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/img_card"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/img_card_valid_back"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_card_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/img_card_valid"
                    app:layout_constraintBottom_toBottomOf="@id/img_card_valid"
                    app:layout_constraintLeft_toRightOf="@id/img_card_valid"
                    android:text="@string/card_valid"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:ellipsize="none"
                    android:singleLine="false"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_card_unoriginal"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/img_card_valid"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/img_card_unoriginal_back"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_card_original"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/img_card_unoriginal"
                    app:layout_constraintBottom_toBottomOf="@id/img_card_unoriginal"
                    app:layout_constraintLeft_toRightOf="@id/img_card_unoriginal"
                    android:text="@string/card_unoriginal"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:ellipsize="none"
                    android:singleLine="false"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_card_punched"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/img_card_unoriginal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/img_card_punched_back"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_card_punched"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/img_card_punched"
                    app:layout_constraintBottom_toBottomOf="@id/img_card_punched"
                    app:layout_constraintLeft_toRightOf="@id/img_card_punched"
                    android:text="@string/card_punched"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:ellipsize="none"
                    android:singleLine="false"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_card_blurred"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/img_card_punched"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:src="@drawable/img_card_blurred_back"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_card_blurred"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/img_card_blurred"
                    app:layout_constraintBottom_toBottomOf="@id/img_card_blurred"
                    app:layout_constraintLeft_toRightOf="@id/img_card_blurred"
                    android:text="@string/card_blurred"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:ellipsize="none"
                    android:singleLine="false"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_got_it"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_card_blurred"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="I got it"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:layout_margin="16dp"
                    android:padding="12dp"
                    android:background="@drawable/button_background_green"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
